<resources>
    <string name="app_name">HomeMatic</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_test_mode">Test mode</string>
    <string name="pref_description_test_mode">Display some test data</string>

    <string name="pref_title_disable_display">Disable display</string>
    <string name="pref_description_disable_display">Display will be switched off after given period</string>

    <string name="pref_title_disable_display_period">Switch off period</string>
    <string-array name="pref_disable_display_period_titles">
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
    </string-array>
    <string-array name="pref_disable_display_period_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
        <item>600</item>
        <item>900</item>
    </string-array>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>5 seconds</item>
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>300</item>
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_sync_ccu_name">CCU Server name</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_reload_notifications">Show reload notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
